--- a/ead-notification-service.yaml
+++ b/ead-notification-service.yaml
@@ -4,6 +4,25 @@ server:
 spring:
   application:
     name: ead-notification-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/ead-course-v2
+    username: postgres
+    password: wete2808
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        jdbc:
+          lob:
+            non-contextual-creation: true
+  output:
+    ansi:
+      enabled: always
+  rabbitmq:
+    addresses: amqps://unodvbxe:UCknjRCONEFvXVreG45wUdSdRtS5cr0G@woodpecker.rmq.cloudamqp.com/unodvbxe
 
 management:
   endpoints:
