--- a/ead-notification-service.yaml
+++ b/ead-notification-service.yaml
@@ -5,7 +5,7 @@ spring:
   application:
     name: ead-notification-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/ead-course-v2
+    url: jdbc:postgresql://localhost:5432/ead-notification
     username: postgres
     password: wete2808
     driver-class-name: org.postgresql.Driver
