--- a/ead-api-gateway.yaml
+++ b/ead-api-gateway.yaml
@@ -17,4 +17,9 @@ spring:
             uri: lb://EAD-COURSE-SERVICE
             predicates:
               -Path=/ead-course/**
+              
+          - id: notification-service
+            uri: lb://EAD-NOTIFICATION-SERVICE
+            predicates:
+              -Path=/ead-notification/**
 
