--- a/ead-api-gateway.yaml
+++ b/ead-api-gateway.yaml
@@ -11,15 +11,12 @@ spring:
           - id: authuser-service
             uri: lb://EAD-AUTHUSER-SERVICE
             predicates:
-              -Path=/ead-authuser/**
-
+              - Path=/ead-authuser/**
           - id: course-service
             uri: lb://EAD-COURSE-SERVICE
             predicates:
-              -Path=/ead-course/**
-              
+              - Path=/ead-course/**
           - id: notification-service
             uri: lb://EAD-NOTIFICATION-SERVICE
             predicates:
-              -Path=/ead-notification/**
-
+              - Path=/ead-notification/**
