--- a/ead-authuser-service.yaml
+++ b/ead-authuser-service.yaml
@@ -7,10 +7,9 @@ spring:
   application:
     name: ead-authuser-service
   datasource:
-    url: jdbc:postgresql://localhost:5432/ead-authuser-v2
+    url:  jdbc:postgresql://localhost:5432/ead-authuser-v2
     username: postgres
     password: wete2808
-    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
       ddl-auto: update
@@ -22,15 +21,10 @@ spring:
             non-contextual-creation: true
   output:
     ansi:
-      enabled: always
+      enabled: Always
   rabbitmq:
     addresses: amqps://unodvbxe:UCknjRCONEFvXVreG45wUdSdRtS5cr0G@woodpecker.rmq.cloudamqp.com/unodvbxe
-logging:
-  level:
-    root: INFO
-    com.ead: TRACE
-    org.springframework.web: DEBUG
-    org.hibernate: INFO
+
 
 ead:
   api:
@@ -40,22 +34,39 @@ ead:
     exchange:
       userEvent: ead.userevent
 
+authuser:
+  refreshscope:
+    name: Michelli Brito UPDATE!!!!!!!
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include:
+          - refresh
+          - health            
+
+logging:
+  level:
+    com.ead: TRACE
+    root: INFO
+    org.springframework.web: DEBUG
+    org.hibernate: INFO
+
+
 resilience4j:
   circuitbreaker:
     instances:
       circuitbreakerInstance:
-        sliding-window-size: 30
-        permitted-number-of-calls-in-half-open-state: 2
-        sliding-window-type: TIME_BASED
-        minimum-number-of-calls: 2
-        wait-duration-in-open-state: 15s
-        failure-rate-threshold: 80
+        slidingWindowSize: 30
+        permittedNumberOfCallsInHalfOpenState: 2
+        slidingWindowType: TIME_BASED
+        minimumNumberOfCalls: 2
+        waitDurationInOpenState: 15s
+        failureRateThreshold: 80
   retry:
     instances:
       retryInstance:
-        max-attempts: 3
-        wait-duration: 5s
-
-
-
+        maxAttempts: 3
+        waitDuration: 5s
 
