--- a/ead-api-gateway.yaml
+++ b/ead-api-gateway.yaml
@@ -6,14 +6,17 @@ spring:
     name: ead-api-gateway
   cloud:
     gateway:
-      discovery:
-        locator:
-          enabled: true
-          lower-case-service-id: true
-      routes:
-        - id: authuser-service
-          uri: lb://EAD-AUTHUSER-SERVICE
-          predicates:
-            - Path=/ead-authuser/**
-          filters:
-            - StripPrefix=1
+      mvc:
+        routes:
+          - id: authuser-service
+            uri: lb://EAD-AUTHUSER-SERVICE
+            predicates:
+              - Path=/ead-authuser/**
+          - id: course-service
+            uri: lb://EAD-COURSE-SERVICE
+            predicates:
+              - Path=/ead-course/**
+          - id: notification-service
+            uri: lb://EAD-NOTIFICATION-SERVICE
+            predicates:
+              - Path=/ead-notification/**
